[package]
name = "goldsmith-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
console-subscriber = "0.4.1"
crossterm = "0.28.1"
eyre = "0.6.12"
itertools = "0.13.0"
ratatui = "0.29.0"
rayon = "1.10.0"
realfft = "3.4.0"
rodio = "0.19.0"
tokio = { version = "1.41.0", features = ["full", "tracing"] }
tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = "0.3.18"
